src/styles/demo.scss
@import "../lib/variables";
@import "../lib/mixins";

@import "./variables.scss";

@import url($demo-font-url);

/* ===== Base ===== */

html,
.markdown-body { // Overwrite default "primer-markdown"
  color: #424242;
  font-family: map-get($demo-fonts, text), sans-serif;
  font-size: 16px;
  line-height: 1.5em;

  code {
    padding: 0.15em 0.3em; // Reduce the "primer-markdown" padding originally `0.2em 04em`.
  }
}

body {
  margin: 0;
}

h1, h2, h3, h4, h5, h6, p {
  margin: 1rem 0;
}

h1, h2, h3 {
  line-height: 1.2em;
}

h1, h2, h4 {
  font-family: map-get($demo-fonts, title), serif;
}

h4 {
  color: #C62828;
}

code {
  font-family: map-get($demo-fonts, code), monospace !important; // Overwrite "prismjs"
  font-size: 0.85rem;
  line-height: 0.85rem;
  white-space: pre;
}

a {
  color: $demo-link;
}

main {
  display: block; // For IE11
}

/* ===== Handle layout ===== */

.demo-layout__desc {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  width: 60%;
  overflow: auto;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
}

.demo-layout__readme {
  padding: 1rem;
  flex-grow: 1;
  flex-shrink: 0;
  box-sizing: border-box;
  background-color: #fff;

  h1 {
    margin-top: 0;
  }

  code {
    padding: 0.15em 0.3em;
    border-radius: 3px; // From "primer-markdown"
    background-color: rgba(27,31,35,0.05); // From "primer-markdown"
  }
}

.demo-layout__code {
  flex-grow: 1;
  flex-shrink: 1;
  overflow: auto;
  min-height: 200px;
  max-height: 100%;
  box-sizing: border-box;
  border-top: $docs-showcase-border;
  background-color: #f6f8fa;
  padding: 1rem;
  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.033) inset;
  overflow-x: auto;
  margin: 0;
  line-height: 1.2rem;
}

// It is required to use a `<pre>` tag otherwise parcel
// production build will remove indentation after minification!
// Whatever, we need parcel build to use `--no-minify` option
// otherwise the html comments are removed... :-(
pre.demo-layout__output {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  width: 40%;
  box-shadow: none;
  box-sizing: border-box;
  overflow: auto;
  //padding: $docs-border-radius;
  border-left: $docs-showcase-border;
  background-color: #fff;
  transition: width ease-in-out $demo-duration, box-shadow ease-in-out $demo-duration;

  // Remove default browser `<pre>` styles
  font-family: inherit;
  white-space: normal;
  margin: 0;
}

pre.demo-layout__output--full {
  width: 100%;
  box-shadow: -100px 0 100px rgba(0, 0, 0, 0.15);
}

pre.demo-layout__output--gray {
  background-color: #f5f5f5;
}

.demo-layout__playground {
  overflow: auto;
  height: 100%;
}

.demo-layout__playground--auto {
  height: auto;
}

.demo-layout__warn {
  color: $demo-warn;
  font-size: 0.875rem;
}

/* ===== Toolbox actions ===== */

$demo-toolbox-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);

.demo-toolbox {
  position: fixed;
  right: 1rem;
  bottom: 1rem;
  box-shadow: $demo-toolbox-shadow;
  border-radius: $docs-border-radius;
  opacity: 0.8;
  transition: opacity ease $demo-duration;

  &:hover {
    opacity: 1;
  }

  // Target action inside the `.demo-toolbox` only
  .demo-toolbox__action {
    box-shadow: 1px 1px 0 rgba(255, 255, 255, 0.1) inset;
    border-radius: 0;

    &:first-child {
      border-top-left-radius: $docs-border-radius;
      border-top-right-radius: $docs-border-radius;
    }

    &:last-child {
      border-bottom-left-radius: $docs-border-radius;
      border-bottom-right-radius: $docs-border-radius;
    }

    &:hover {
      box-shadow: 1px 1px 0 rgba(0, 0, 0, 0.1) inset;
    }

    + .demo-toolbox__action {
      margin-top: -1px;
    }
  }
}

// Target action inside or outside the `.demo-toolbox`
.demo-toolbox__action {
  display: block;
  width: 2rem;
  height: 2rem;
  line-height: 2rem;
  border: 1px solid map-get($demo-action, border);
  background-color: map-get($demo-action, background);
  background-size: 1.25rem 1.25rem;
  background-repeat: no-repeat;
  background-position: center center;
  color: map-get($demo-action, forground) !important;
  text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.2);
  text-align: center;
  text-decoration: none;
  opacity: 0.8;
  transition: opacity ease $demo-duration;

  // The 2 following rules are designed to use `.demo-toolbox__action`
  // as a standalone button, outside a `.demo-toolbox` container.
  box-shadow: $demo-toolbox-shadow;
  border-radius: $docs-border-radius;

  &:hover {
    opacity: 1;
  }
}

.demo-toolbox__action--active {
  border-color: map-get($demo-action, background);
  background-color: map-get($demo-action, active);
}

.demo-toolbox__action--full-screen  { background-image: url(../images/desktop.svg);     }
.demo-toolbox__action--auto-height  { background-image: url(../images/scroll.svg);      }
.demo-toolbox__action--direction    { background-image: url(../images/directions.svg);  }
.demo-toolbox__action--grid-gap     { background-image: url(../images/th-large.svg);    }
.demo-toolbox__action--theme        { background-image: url(../images/palette.svg);     }

/* ===== Handle dummy container and text ===== */

.demo-container {
  cursor: pointer;
  overflow: hidden;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  border: 1px solid #C8E6C9;
  background-color: #E8F5E9;
  color: #66BB6A;
  text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
  font-family: map-get($demo-fonts, code), monospace;
  font-size: 12px;
  line-height: 3em;
  text-indent: 1em;
  white-space: nowrap;
  &:after {
    content: "100% * 100%";
  }
}

.demo-container--alt {
  width: 1000px;
  height: 1000px;
  border-color: #A5D6A7;
  background-color: #C8E6C9;
  color: #4CAF50;
  &:after {
    content: "1000px * 1000px";
  }
}

// .demo-text {}
.demo-text__bg-1 { background-color: #FFF8E1; }
.demo-text__bg-2 { background-color: #E1F5FE; }
.demo-text__bg-3 { background-color: #E8F5E9; }
.demo-text__bg-4 { background-color: #FFEBEE; }
.demo-text__bg-5 { background-color: #F3E5F5; }

/* ===== Chart ===== */

.demo-chart {
  width: 100%;
  height: 100%;
}

/* ===== Responsive ===== */

.demo-layout__tabs-nav {
  display: flex;
  height: 2.5rem;
  line-height: 2.5rem;
  background-color: #f5f5f5;
}

.demo-layout__tabs-nav-item {
  flex-grow: 1;
  text-align: center;
  text-decoration: none;

  & + .demo-layout__tabs-nav-item {
    border-left: $docs-showcase-border;
  }
}

.demo-layout__tabs-nav-item--open {
  background-color: $demo-link;
  color: #fff;
}

@include bfg-media-breakpoint-down(sm) {
  // Reset css
  .demo-layout__desc {
    position: static;
    display: inline;
  }

  // Reset css
  pre.demo-layout__output {
    box-shadow: none;
  }
  // Remove full-screen action
  .demo-toolbox .demo-toolbox__action--full-screen {
    display: none;

    & + .demo-toolbox__action {
    border-top-left-radius: $docs-border-radius;
    border-top-right-radius: $docs-border-radius;
    }
  }

  body {
    .demo-layout__tabs-content {
      border: none;
      border-top: $docs-showcase-border;
      width: auto;
      position: fixed;
      top: 2.5rem;
      right: 0;
      bottom: 0;
      left: 0;
      z-index: 1;
    }

    .demo-layout__tabs-content--open {
      z-index: 2;
    }
  }
}

